--- a/src/sprite.css
+++ b/src/sprite.css
@@ -14,3 +14,13 @@
 
     position: absolute;
 }
+
+#score {
+
+    position: absolute;
+    font-family: 'Courier New', monospace;
+    border: 2px solid green;
+    width: 200px;
+    height: 50px;
+    left: 0px;
+}
